--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.13)
 
 project(HW2)
 
-add_executable(HW2 HW2/test_flight.c HW2/flight.c HW2/runway.c HW2/runway.h)
+add_executable(HW2 HW2/flight.c HW2/runway.c HW2/runway.h HW2/test_runway.c)
