HW3 updated hash.h and beginning of hash.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(HW2)
-
-add_executable(HW2 HW2/flight.c HW2/runway.c HW2/runway.h HW2/airport.c HW2/airport.h HW2/main.c)
+project(HW3 C)
+add_executable(HW3 HW3/hash.c)
