--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.13)
 
 project(HW3 C)
-add_executable(HW3 HW3/hash.c)
+add_executable(HW3 HW3/hash.c HW3/dict.c HW3/plsCompile.c)
