until Movie class

--- a/HW4/CMakeLists.txt
+++ b/HW4/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 project(HW4)
 set(CMAKE_CXX_STANDARD 11)
-add_executable(HW4 main.C)
+add_executable(HW4 Mat.cpp Mat.h compilation_check.cpp Theater.cpp Theater.h Movie.cpp Movie.h)
