all files finished but not working

--- a/HW4/CMakeLists.txt
+++ b/HW4/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 project(HW4)
 set(CMAKE_CXX_STANDARD 11)
-add_executable(HW4 Mat.cpp Mat.h compilation_check.cpp Theater.cpp Theater.h Movie.cpp Movie.h)
+add_executable(HW4 Mat.cpp Mat.h main.C Theater.cpp Theater.h Movie.cpp Movie.h DubbedMovie.cpp DubbedMovie.h Cashier.cpp Cashier.h Employee.h Employee.cpp)
