--- a/HW5/CMakeLists.txt
+++ b/HW5/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 project(HW5)
 set(CMAKE_CXX_STANDARD 11)
-add_executable(HW5 false_main.cpp Parcel.cpp DliveryVehicle.cpp )
+add_executable(HW5 false_main.cpp Parcel.cpp DliveryVehicle.cpp ProfessionalDeliveryVehicle.cpp FastDeliveryVehicle.cpp DeliveryCompany.cpp DeliveryVehicleList.cpp FastDeliveryCompany.cpp ProfessionalDeliveryCompany.cpp)
