--- a/HW5/CMakeLists.txt
+++ b/HW5/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 project(HW5)
 set(CMAKE_CXX_STANDARD 11)
-add_executable(HW5 main1.C Parcel.cpp DliveryVehicle.cpp ProfessionalDeliveryVehicle.cpp FastDeliveryVehicle.cpp DeliveryCompany.cpp DeliveryVehicleList.cpp FastDeliveryCompany.cpp ProfessionalDeliveryCompany.cpp)
+add_executable(HW5 main1.C Parcel.C DliveryVehicle.C ProfessionalDeliveryVehicle.C FastDeliveryVehicle.C DeliveryCompany.C DeliveryVehicleList.C FastDeliveryCompany.C ProfessionalDeliveryCompany.C)
